# libnacs

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: archlinux.yml  cmake.yml  linux.yml  msys2.yml  ubuntu.yml
cmake/: FindOpenLibm.cmake
data/: CMakeLists.txt
github/: setup-archlinux.sh
lib/: CMakeLists.txt
lib/kernel/: CMakeLists.txt  devctl.cpp  devctl.h  devctl_p.h  device.cpp  device.h  device_p.h  dma_buffer.cpp  dma_buffer.h  nacs-kernel.pc.in
lib/nacs-kernel/: CMakeLists.txt  devctl.cpp  devctl.h  device.cpp  device_p.h  dma_buffer.cpp
lib/nacs-seq/: CMakeLists.txt  anchor.cpp  basic_seq.cpp  basic_seq.h  builder.cpp  builder.h  bytecode.cpp  bytecode.h  cmdlist.cpp  cmdlist.h  compiler.cpp  compiler.h  device.cpp  device.h  env.cpp  env.h  error.cpp  error.h  event_time.cpp  event_time.h  exehelper_p.h  host_seq.cpp  host_seq.h  manager.cpp  manager.h  parser.cpp  parser_p.h  pulse.cpp  pulse.h  seq.cpp  seq.h  sign.h  var.cpp
lib/nacs-seq/awg/: DummyClient.cpp  DummyClient.h  backend.cpp  backend.h
lib/nacs-seq/nidaq/: backend.cpp  backend.h  data_gen.cpp  data_gen.h
lib/nacs-seq/zynq/: backend.cpp  backend.h  bc_gen.cpp  bc_gen.h  bytecode.cpp  bytecode.h  cmdlist.cpp  cmdlist.h  dma.cpp  dma.h  exehelper_p.h  legacy_seq.cpp  legacy_seq.h  parser.cpp  parser_p.h  pulse_time.h  seq.cpp  seq.h  seq_shared.h  utils.h
lib/nacs-utils/: CMakeLists.txt  container.h  dlload.cpp  errors.cpp  errors.h  fd_utils.cpp  fd_utils.h  features_aarch32.h  features_aarch64.h  features_x86.h  gen_libnames.cmake  interp.cpp  ir-interp-shim.S  ir.cpp  ir.h  log.cpp  log.h  macros.h  mem.h  nacs_lib_names.win.h  number.cpp  number.h  number_simd.S  processor.h  processor_arm.cpp  (+12 more)
lib/seq/: CMakeLists.txt  anchor.cpp  basic_seq.cpp  basic_seq.h  builder.cpp  builder.h  bytecode.cpp  bytecode.h  cmdlist.cpp  cmdlist.h  compiler.cpp  compiler.h  env.cpp  env.h  error.cpp  error.h  event_time.cpp  event_time.h  exehelper_p.h  host_seq.cpp  host_seq.h  manager.cpp  manager.h  misc.cpp  misc.h  nacs-seq.pc.in  parser.cpp  parser_p.h  pulse.cpp  pulse.h  pulse_time.h  pulser.cpp  pulser.h  rtenv.cpp  rtenv.h  seq.cpp  seq.h  timing.cpp  timing.h  var.cpp
lib/seq/zynq/: bytecode.cpp  bytecode.h  cmdlist.cpp  cmdlist.h  exehelper_p.h  legacy_seq.cpp  legacy_seq.h  parser.cpp  parser_p.h  pulse_time.h  seq.cpp  seq.h
lib/utils/: CMakeLists.txt  base64.cpp  base64.h  config.h.in  container.h  dlload.cpp  dlload.h  errors.cpp  errors.h  fd_utils.cpp  fd_utils.h  features_aarch32.h  features_aarch64.h  features_x86.h  gen_libnames.cmake  gen_libnames.sh  get_soname.cpp  interp.cpp  interp_p.h  ir-interp-shim.S  ir.cpp  ir.h  ir_p.h  log.cpp  log.h  macros.h  mem.cpp  mem.h  nacs-utils.pc.in  number.cpp  number.h  number_simd.S  processor.cpp  processor.h  processor_arm.cpp  processor_fallback.cpp  processor_x86.cpp  streams.cpp  streams.h  term.cpp  (+12 more)
lib/utils/llvm/: analysis.cpp  analysis.h  codegen.cpp  codegen.h  codegen_p.h  compile.cpp  compile.h  compile_p.h  cpu_nollvm.cpp  cpu_p.h  execute.cpp  execute.h  global_rename.cpp  global_rename.h  inst_simplify.cpp  inst_simplify.h  lower_vector.cpp  lower_vector.h  memmgr.cpp  mergephi-pass.cpp  mergephi.cpp  mergephi.h  utils.cpp  utils.h  vector_abi.cpp  vector_abi.h  vectorize.cpp  vectorize.h
python/: CMakeLists.txt  __init__.py
test/: CMakeLists.txt  error_helper.h  plot_seq.jl  travis_build.sh  winpath_helper.h.in
test/kernel/: CMakeLists.txt  test_dma_buff.cpp  test_getver.cpp  test_pulse_ctl.cpp
test/seq/: CMakeLists.txt  compiler_helper.h  cs_single_atom.seq  na_single_atom.seq  nacs_single_atom.seq  test_awg_backend.cpp  test_awg_client.cpp  test_awg_client_seq.cpp  test_awg_client_seq_real.cpp  test_builder.cpp  test_builder_check.cpp  test_builder_deserial.cpp  test_cmdlist_parse.cpp  test_compiler.cpp  test_env.cpp  test_event_time.cpp  test_host_seq.cpp  test_host_seq_error.cpp  test_misc.cpp  test_nidaq_backend.cpp  test_nidaq_data_gen.cpp  test_optimize.cpp  test_pulse.cpp  test_schedule.cpp  test_schedule2.cpp  test_seq.cpp  test_seq_check.cpp  test_seq_optimize.cpp  test_zynq_backend.cpp  test_zynq_bc_gen.cpp  zynq_helper.h
test/seq/cmdlists/: dds_freq  dds_freq.cmdbin  dds_freq.txt  invalid_cmd  invalid_cmd.err  invalid_cmd2  invalid_cmd2.err  invalid_dds  invalid_dds.err  invalid_freq  invalid_freq.err  invalid_freq2  invalid_freq2.err  invalid_freq_unit  invalid_freq_unit.err  invalid_freq_val  invalid_freq_val.err  invalid_freq_val2  invalid_freq_val2.err  invalid_ttl  invalid_ttl.err  invalid_ttl1_1  invalid_ttl1_1.err  invalid_ttl1_2  invalid_ttl1_2.err  invalid_ttl1_3  invalid_ttl1_3.err  invalid_ttl1_4  invalid_ttl1_4.err  invalid_ttl1_space  invalid_ttl1_space.err  invalid_ttl_t1  invalid_ttl_t1.err  invalid_ttl_t2  invalid_ttl_t2.err  invalid_ttl_t3  invalid_ttl_t3.err  invalid_ttlall_space  invalid_ttlall_space.err  invalid_wait  (+22 more)
test/utils/: CMakeLists.txt  codegen_helper.h  ir_helper.h  test_anyptr.cpp  test_base64.cpp  test_bits.cpp  test_buff_streams.cpp  test_codegen.cpp  test_codegen_call.cpp  test_codegen_closure.cpp  test_codegen_cmp.cpp  test_codegen_convert.cpp  test_codegen_dump.cpp  test_codegen_logical.cpp  test_const_stream.cpp  test_cpu.cpp  test_datapipe.cpp  test_datareader.cpp  test_dl.cpp  test_fifo.cpp  test_filterqueue.cpp  test_fixedqueue.cpp  test_helpers.h  test_interp.cpp  test_ir.cpp  test_ir_call.cpp  test_ir_cc.cpp  test_ir_cmp.cpp  test_ir_convert.cpp  test_ir_logical.cpp  test_phy_addr.cpp  test_small_alloc.cpp  test_syntax_error.cpp  test_term.cpp  test_thread.cpp  test_vec_codegen.cpp  test_vec_codegen_call.cpp  test_vec_codegen_cmp.cpp  test_vec_codegen_convert.cpp  test_vec_codegen_logical.cpp  (+4 more)
tools/: CMakeLists.txt  nacs_bcc.cpp  nacs_bcdump.cpp  nacs_cmdlist.cpp  nacs_cpudump.cpp  nacs_fpga_bcc.cpp  nacs_fpga_bcdump.cpp  nacs_fpga_cmdlist.cpp  nacs_fpga_seqdump.cpp  nacs_seq.cpp  nacs_seq_pre_run.cpp  nacs_seqdump.cpp  nacs_zynq_bc.cpp  nacs_zynq_bcc.cpp  nacs_zynq_bcdump.cpp  nacs_zynq_cmdlist.cpp  nacs_zynq_seqdump.cpp
(+26 files in other folders)
